--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "grunt-jscs": "^1.8.0",
     "grunt-newer": "^1.1.0",
     "grunt-ng-annotate": "^0.9.2",
+    "grunt-ng-constant": "^2.0.1",
     "grunt-postcss": "^0.5.5",
+    "grunt-shell": "^2.1.0",
     "grunt-svgmin": "^2.0.0",
     "grunt-usemin": "^3.0.0",
     "grunt-wiredep": "^2.0.0",
