--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,9 @@
     "angular-touch": "^1.4.0",
     "components-font-awesome": "^4.7.0",
     "angular-ui-router": "^0.3.2",
-    "satellizer": "^0.15.5"
+    "satellizer": "^0.15.5",
+    "angular-viacep": "^0.1.0",
+    "angular-nvd3": "^1.0.9"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
